fix first_name and add test
