# src/schema/user-schema.js
@@ -2,7 +2,7 @@ const { body}  = require('express-validator');
 
 const signUpValidation = [
     body('email').isEmail().withMessage('email must contain a valid email adress'),
-    body('firstName').exists({checkFalsy: true}).withMessage('name is required'),
+    body('first_name').exists({checkFalsy: true}).withMessage('name is required'),
     body('age').exists({checkFalsy: true}).withMessage('age should be mentionned'),
     body('password').exists({checkFalsy: true}).withMessage('password should exist')
 ]
